revision history for NetPacket

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]
 - Addition of NetPacket::IPX. (Daniel Collins)

 [NEW FEATURES]

 [STATISTICS]

1.4.4 2013-11-30
 [BUG FIXES]
 - NetPacket::USBMon: also handle big endian perl without quad type. 
   (GH#5, Andreas Schwab)
 - Typo fix in comments. (GH#6, fschlich)

 [STATISTICS]
 - code churn: 3 files changed, 13 insertions(+), 4 deletions(-)

1.4.3 2013-10-03
 [BUG FIXES]
 - Unpack data in LittleEndian format. (GH#4, k0da)

 [STATISTICS]
 - code churn: 3 files changed, 62 insertions(+), 27 deletions(-)

1.4.2 2013-09-25
 [BUG FIXES]
 - Dist::Zilla::Plugin::Test::Compile was causing test to potentially hang
   on Windows. (reported by Karen Etheridge)

 [MISC]
 - Tidy up the changelog. (GH#3, Neil Bowers)

 [STATISTICS]
 - code churn: 2 files changed, 46 insertions(+), 20 deletions(-)

1.4.1 2013-09-05
 [BUG FIXES]
 - Test was using Errno constant and failing on some platforms.

 [STATISTICS]
 - code churn: 2 files changed, 15 insertions(+), 7 deletions(-)

1.4.0 2013-08-26
 [DOCUMENTATION]
 - Fixing NetPacked::UDP documentation. (RT#85361, Ben Magistro)

 [ENHANCEMENTS]
 - New NetPacket::USBMon. (GH#2, lkundrak)

 [STATISTICS]
 - code churn: 8 files changed, 595 insertions(+), 16 deletions(-)

1.3.3 2013-05-15
 [BUG FIXES]
 - Parse SACK option and fix TSecr parsing. (GH#1, Robin Lee)

 [STATISTICS]
 - code churn: 5 files changed, 46 insertions(+), 7 deletions(-)

1.3.2 2013-05-03
 [BUG FIXES]
 - Fix NetPacket::UDP's strip. (RT#85038, reported by Stan Schwertly)

 [STATISTICS]
 - code churn: 12 files changed, 71 insertions(+), 21 deletions(-)

1.3.1 2011-11-23
 [BUG FIXES]
 - Use of constant withotu parenthesis made test fail under 5.6.2.

1.3.0 2011-11-13
 [ENHANCEMENTS]
 - 'parse_tcp_options()' method added to NetPacket::TCP (patch by Tom
   Linden) [RT#71320]

1.2.0 2011-07-26
 [ENHANCEMENTS]
 - Add support for Ethernet VLAN (thanks to Kai Chan)

1.1.2 2011-06-20